added .desktop file; added make-install targets

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ add_subdirectory(src)
 if (UNIX)
 	if (APPLE)
 	else()
-		install(FILES share/cpp-editor.desktop DESTINATION /usr/share/applications)
+		install(FILES log-viewer.desktop DESTINATION /usr/share/applications)
 		install(CODE "execute_process(COMMAND update-desktop-database)")
 	endif()
 endif()
